bfd/ 2012-11-05  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

PR target/14788
	* elf32-s390.c (elf_s390_relocate_section): Set elf.dynobj for
	local ifunc symbols.
	* elf64-s390.c (elf_s390_relocate_section): Likewise.